pandaseq.h

/**
 * Maximum length of a sequence
 */
#define PANDA_MAX_LEN 300
typedef void (*PandaPrintf)(void *data, const char *format, ...);
const char *panda_version(void);
/**
 * Codes used for logging conditions during the assembly.
 *
 * Some of these are errors and some are informational.
 */
typedef enum {
	PANDA_CODE_API_VERSION/*(int api_version)*/,
	PANDA_CODE_BAD_NT/*(panda_seq_identifier *id, int character)*/,
	PANDA_CODE_BEST_OVERLAP/*(panda_seq_identifier *id, int overlap)*/,
	PANDA_CODE_BUILD_FORWARD/*(panda_seq_identifier *id, int index_in_assembly, int index_in_reverse, panda_result *nt)*/,
	PANDA_CODE_BUILD_OVERLAP/*(panda_seq_identifier *id, int index_in_assembly, int index_in_forward, int index_in_reverse, panda_result *nt, panda_nt *forward, panda_nt *reverse)*/,
	PANDA_CODE_BUILD_REVERSE/*(panda_seq_identifier *id, int index_in_assembly, int index_in_reverse, panda_result *nt)*/,
	PANDA_CODE_FORWARD_KMER/*(panda_seq_identifier *id, unsigned int kmer, ssize_t position)*/,
	PANDA_CODE_ID_PARSE_FAILURE/* (const char *id) */,
	PANDA_CODE_INSUFFICIENT_KMER_TABLE/*(panda_seq_identifer *id)*/,
	PANDA_CODE_LOST_KMER/*(panda_seq_identifier *id, unsigned int kmer, ssize_t position)*/,
	PANDA_CODE_LOW_QUALITY_REJECT/*(panda_seq_identifier *id, double quality, double threshold)*/,
	PANDA_CODE_MISMATCHED_BASE/*(panda_seq_identifier *id, int index_in_forward, int index_in_reverse, panda_qual *forward, panda_qual *reverse)*/,
	PANDA_CODE_MOD_INFO/*(PandaModule module)*/,
	PANDA_CODE_NEGATIVE_SEQUENCE_LENGTH/*(panda_seq_identifier *id)*/,
	PANDA_CODE_NO_DATA/*(panda_seq_identifier *id)*/,
	PANDA_CODE_NO_FILE/*(const char *filename)*/,
	PANDA_CODE_NO_FORWARD_PRIMER/*(panda_seq_identifier *id)*/,
	PANDA_CODE_NO_QUALITY_INFO/*(panda_seq_identifier *id)*/,
	PANDA_CODE_NO_REVERSE_PRIMER/*(panda_seq_identifier *id)*/,
	PANDA_CODE_NOT_PAIRED/*(panda_seq_identifier *foward, panda_seq_identifier *reverse)*/,
	PANDA_CODE_OVERLAP_POSSIBILITY/*(panda_seq_identifier *id, size_t overlap, size_t matches, size_t mismatches, size_t unknowns, double probability)*/,
	PANDA_CODE_PARSE_FAILURE/*(panda_seq_identifier *id)*/,
	PANDA_CODE_PREMATURE_EOF/*(panda_seq_identifier *id)*/,
	PANDA_CODE_RECONSTRUCTION_PARAM/*(panda_seq_identifier *id, int overlap, int forward_unpaired, int reverse_unpaired)*/,
	PANDA_CODE_REJECT_STAT/*(PandaModule module, long rejected_sequence_count)*/,
	PANDA_CODE_REVERSE_KMER/*(panda_seq_identifier *id, unsigned int kmer, ssize_t position)*/,
	PANDA_CODE_SEQUENCE_TOO_LONG/*(panda_seq_identifier *id)*/,
} PandaCode;
/**
 * A single nucleotide
 */
typedef char panda_nt;
/**
 * A single nucleotide with quality information
 */
typedef struct {
	/**
	 * The nucleotide
	 */
	panda_nt nt;
	/**
	 * The quality score as a PHRED score
	 */
	char qual;
} panda_qual;
/**
 * Convert the PHRED quality score to a probability.
 */
double panda_quality_probability(const panda_qual *q);
/**
 * Convert the PHRED quality score to a log probability.
 */
double panda_quality_log_probability(const panda_qual *q);
typedef struct {
	/**
	 * The nucleotide
	 */
	panda_nt nt;
	/**
	 * The quality score as a log probability
	 */
	double p;
} panda_result;
/**
 * Illumina sequence information from the FASTQ header
 */
typedef struct {
	char instrument[100];
	int run;
	char flowcell[100];
	int lane;
	int tile;
	int x;
	int y;
	char tag[PANDA_TAG_LEN];
} panda_seq_identifier;
/**
 * Write the Illumina header to a printf-like function
 */
void panda_seqid_xprint(const panda_seq_identifier *id, PandaPrintf xprintf, void *x);
/**
 * Write an Illumina header for a sequence identifer to a file
 */
void panda_seqid_print(const panda_seq_identifier *id, FILE *file);
/**
 * Create an Illumina header for a sequence identifier
 *
 * The return string must not be freed and subsequent calls will obliterate the previously returned string.
 */
/*@dependent@*/const char *panda_seqid_str(const panda_seq_identifier *id);
/**
 * Compare two Illumina headers
 */
bool panda_seqid_equal(const panda_seq_identifier *one, const panda_seq_identifier *two);
/**
 * Parse an Illumina header
 *
 * Fills `id` with the parse result. The function returns the direction of the sequence (1 for forward, 2 for reverse) or 0 if an error occurs.
 */
int panda_seqid_parse(panda_seq_identifier *id, char *input);
/**
 * A reconstructed sequence with meta information
 */
typedef struct {
	/**
	 * Calculated quality score as the geometric mean of the product of the Illumina quality scores of the included bases.
	 *
	 * It will always be between 0 and 1.
	 */
	double quality;
	/**
	 * Number of uncalled bases in the sequence.
	 */
	size_t degenerates;
	/**
	 * The sequence identification information
	 */
	panda_seq_identifier name;
	/**
	 * The reconstructed sequence with quality information
	 */
	panda_result sequence[PANDA_MAX_LEN];
	size_t sequence_length;
	/**
	 * The original forward sequence
	 */
	panda_qual *forward;
	size_t forward_length;
	/**
	 * The original reverse sequence
	 */
	panda_qual *reverse;
	size_t reverse_length;

	/**
	 * The number of nucleotides clipped from the forward sequence
	 */
	size_t forward_offset;
	/**
	 * The number of nucleotides clipped from the reverse sequence
	 */
	size_t reverse_offset;
	/**
	 * The number of mismatches in the overlap region.
	 */
	size_t overlap_mismatches;
} panda_result_seq;
/**
 * Sequence validity checker
 */
typedef /*@refcounted@*/ struct panda_module* PandaModule;
/**
 * Check a sequence after reconstruction for validity.
 */
typedef bool (*PandaCheck)(const panda_result_seq *sequence, void *user_data);
/**
 * Check a sequence before reconstruction for validity.
 */
typedef bool (*PandaPreCheck)(const panda_seq_identifier *id, const panda_qual *forward, size_t forward_length, const panda_qual *reverse, size_t reverse_length, void *user_data);
/**
 * Free user data
 *
 * Any method which takes user data with a function pointer will call a destroy function when the user data is not longer needed such that the memory can be freed, if necessary. A destroy function may always be null, in which case, the memory managment is the responsibility of the caller.
 */
typedef void (*PandaDestroy) (void *user_data);
/**
 * Log an error/event
 *
 * If the function returns false, assembly will be halted.
 * The variadic arguments will provide context based on the particular code passed.
 * @see PandaCode
 */
typedef bool (*PandaLogger)(void *user_data, PandaCode code, ...);
/**
 * Create a module given sequence checking parameters.
 *
 * @param name the name of the module, for user interaction
 * @param check the check function, which must not be null
 * @param precheck an optional check to be done before the module
 * @param cleanup an optional function to be called when this module is garbage collected
 * The user is responsible for managing the memory associated with user_data, but the cleanup function will always be called.
 */
/*@notnull@*/PandaModule panda_module_new(/*@notnull@*/char *name, /*@notnull@*/PandaCheck check, /*@null@*/PandaPreCheck precheck, /*@null@*/void *user_data, /*@null@*/PandaDestroy cleanup);
/**
 * Load a module from a string containg the module name and arguments.
 *
 * @param path the name or path to a module separated by LT_PATHSEP_CHAR and any arguments to the initialisation function of that module
 */
/*@null@*/PandaModule panda_module_load(/*@notnull@*/char *path);
/**
 * Increase the reference count on a module.
 */
/*@notnull@*/PandaModule panda_module_ref(/*@notnull@*/PandaModule module);
/**
 * Decrease the reference count on a module.
 */
void panda_module_unref(/*@notnull@*/PandaModule module);
/**
 * Get the name of a module.
 *
 * The string returned must NOT be freed.
 */
/*@dependent@*/const char *panda_module_get_name(/*@notnull@*/PandaModule module);
/**
 * Get the description of a module.
 *
 * This is only appropriate for loaded modules.
 * Possibly null. The string returned must NOT be freed.
 */
/*@dependent@*/const char *panda_module_get_description(/*@notnull@*/PandaModule module);
/**
 * Get the usage information (i.e., help text) of a module.
 *
 * This is only appropriate for loaded modules.
 * Possibly null. The string returned must NOT be freed.
 */
/*@dependent@*/const char *panda_module_get_usage(/*@notnull@*/PandaModule module);
/**
 * Get the version of a module.
 *
 * This is only appropriate for loaded modules.
 * Possibly null. The string returned must NOT be freed.
 */
/*@dependent@*/const char *panda_module_get_version(/*@notnull@*/PandaModule module);
/**
 * Get the arguments passed on loading of a module of a module.
 *
 * This is only appropriate for loaded modules.
 * Possibly null. The string returned must NOT be freed.
 */
/*@dependent@*/const char *panda_module_get_args(/*@notnull@*/PandaModule module);
/**
 * Get the version of a module.
 *
 * This is only appropriate for loaded modules. Modules constructed by panda_module_new will always return PANDA_API.
 */
int panda_module_get_api(/*@notnull@*/PandaModule module);
/**
 * Get the next character from a FASTQ file or EOF.
 *
 * For assembly from an alternate source of data, this function returns the next character in the stream.
 */
typedef int (*PandaNextChar)(/*@null@*/void* user_data);
/**
 * Get the next sequence pair.
 *
 * For assembly from a non-FASTQ text source, this function can provide the next sequence. The function must provide the sequences and metadata for assembly by modifing the values of its parameters.
 * @param id the identifier information for the sequence pair
 * @param forward the location of the parsed sequence data of the forward read. This memory is not managed by the assembler.
 * @param forward_length the number of nucleotides in the forward read
 * @param reverse the location of the parsed sequence data of the reverse read. This memory is not managed by the assembler.
 * @param reverse_length the number of nucleotides in the reverse read
 */
typedef bool (*PandaNextSeq)(/*@notnull@ @out@*/panda_seq_identifier *id, /*@notnull@ @out@*/panda_qual **forward, /*@notnull@ @out@*/size_t *forward_length, /*@notnull@ @out@*/panda_qual **reverse, /*@notnull@ @out@*/size_t *reverse_length, /*@null@*/void *user_data);
/**
 * Create an object to read sequences from two character streams of FASTQ data
 *
 * @param forward, forward_data, forward_destroy the functions to provide the stream of forward characters. Every time a new character is required, forward(forward_data) is called. When the stream has returned EOF or the assembler is deallocated, forward_destroy(forward_data) is called.
 * @param reverse, reverse_data, reverse_destroy the same for the reverse sequence.
 * @param logger, logger_data the logging function to use during assembly. The logging function will not be memory managed.
 * @param user_data where to store the user_data for this function
 * @param destroy where to store the destroy function for the user data
 */
PandaNextSeq panda_assembler_create_fastq_reader(/*@notnull@*/PandaNextChar forward, /*@null@*/void *forward_data, /*@null@*/PandaDestroy forward_destroy, /*@notnull@*/PandaNextChar reverse, /*@null@*/void *reverse_data, /*@null@*/PandaDestroy reverse_destroy, /*@notnull@*/PandaLogger logger, /*@null@*/void *logger_data, unsigned char qualmin, /*@notnull@ @out@*/void **user_data, /*@notnull@ @out@*/PandaDestroy *destroy);
/**
 * Write an assembly to a FASTA file.
 */
bool panda_output_fasta(/*@notnull@*/const panda_result_seq *sequence, /*@notnull@*/FILE *file);
/**
 * Write an assembly to a FASTQ file.
 */
bool panda_output_fastq(/*@notnull@*/const panda_result_seq *sequence, /*@notnull@*/FILE *file);
/**
 * Write errors and information to a file.
 */
bool panda_logger_file(/*@notnull@*/FILE *file, PandaCode code, ...);
/**
 * Writes an error message using the supplied printf-like function.
 */
bool panda_logger_v(PandaPrintf xprintf, void *x, PandaCode code, va_list va);
/*
 * Convenience macro is for Vala
 */
#define PANDA_LOGGER(file, user_data, destroy) (*user_data = file, *destroy = NULL, (PandaLogger) panda_logger_file)
/* Convenience macros for creating modules */
#define PANDA_API 1