pandaseq-2.vapi


	/**
	 * Sequence validity checker
	 */
	[CCode(cname = "struct panda_module", ref_function = "panda_module_ref", unref_function = "panda_module_unref")]
	public class Module {
		/**
		 * The current module API version
		 */
		[CCode(cname = "PANDA_API")]
		public const int API;

		/**
		 * The API version of a module.
		 *
		 * This is only appropriate for loaded modules. Modules constructed by {@link create} will always return {@link API}.
		 */
		public int api {
			[CCode(cname = "panda_module_get_api")]
			get;
		}

		/**
		 * The arguments passed on loading of a module of a module.
		 *
		 * This is only appropriate for loaded modules.
		 */
		public string? args {
			[CCode(cname = "panda_module_get_args")]
			get;
		}

		/**
		 * The description of a module.
		 *
		 * This is only appropriate for loaded modules.
		 */
		public string? description {
			[CCode(cname = "panda_module_get_description")]
			get;
		}

		/**
		 * The name of a module.
		 */
		public string name {
			[CCode(cname = "panda_module_get_name")]
			get;
		}

		/**
		 * The usage information (i.e., help text) of a module.
		 *
		 * This is only appropriate for loaded modules.
		 */
		public string? usage {
			[CCode(cname = "panda_module_get_usage")]
			get;
		}

		/**
		 * The version of a module.
		 *
		 * This is only appropriate for loaded modules.
		 */
		public string? version {
			[CCode(cname = "panda_module_get_version")]
			get;
		}

		/**
		 * Check a sequence after reconstruction for validity.
		 */
		[CCode(cname = "PandaCheck", has_target = false, simple_generics = true)]
		public delegate bool Check<T>(T data, result_seq sequence);
		/**
		 * Check a sequence before reconstruction for validity.
		 */
		[CCode(cname = "PandaPreCheck", has_target = false, simple_generics = true)]
		public delegate bool PreCheck<T>(T data, identifier id, qual[] forward, qual[] reverse);

		/**
		 * Create a module given sequence checking parameters.
		 *
		 * @param name the name of the module, for user interaction
		 * @param check the check function, which must not be null
		 * @param precheck an optional check to be done before the module
		 */
		[CCode(cname = "panda_module_new", simple_generics = true)]
		public static Module create<T>(string name, Check<T> check, PreCheck<T> precheck, owned T user);

		/**
		 * Load a module from a string containg the module name and arguments.
		 *
		 * @param path the name or path to a module separated by LT_PATHSEP_CHAR and any arguments to the initialisation function of that module
		 */
		[CCode(cname = "panda_module_load")]
		public static Module load(string path);

		/**
		 * Increment reference count.
		 */
		[CCode(cname = "panda_module_ref")]
		public unowned Module @ref();
		/**
		 * Decrement reference count.
		 */
		[CCode(cname = "panda_module_unref")]
		public void unref();
	}

	/**
	 * Illumina sequence information from the FASTQ header
	 */
	[CCode(cname = "panda_seq_identifier", has_type_id = false, destroy_function = "")]
	public struct identifier {
		string flowcell;
		string instrument;
		int lane;
		int run;
		string tag;
		int tile;
		int x;
		int y;
		/**
		 * Parse an Illumina header
		 *
		 * Fills `id` with the parse result. The function returns the direction of the sequence (1 for forward, 2 for reverse) or 0 if an error occurs.
		 */
		[CCode(cname = "panda_seqid_parse")]
		public static int parse(out identifier id, string input);
		/**
		 * Compare two Illumina headers
		 */
		[CCode(cname = "panda_seqid_equal")]
		public bool equal(identifier other);
		/**
		 * Write the Illumina header to a printf-like function
		 */
		[CCode(cname = "panda_seqid_xprint")]
		public void print(PrintfFunc func);
		/**
		 * Write an Illumina header for a sequence identifer to a file
		 */
		[CCode(cname = "panda_seqid_print")]
		public void to_file(
#if POSIX
Posix.FILE
#else
GLib.FileStream
#endif
file);
		/**
		 * Create an Illumina header for a sequence identifier
		 *
		 * The return string must not be freed and subsequent calls will obliterate the previously returned string.
		 */
		[CCode(cname = "panda_seqid_str")]
		 public unowned string to_string();
	}

	/**
	 * A single nucleotide with quality information
	 */
	[CCode(cname = "panda_qual", has_type_id = false)]
	public struct qual {
		/**
		 * The nucleotide
		 */
		Nt nt;
		/**
		 * The quality score as a PHRED score
		 */
		char qual;
		/**
		 * Convert the PHRED quality score to a log probability.
		 */
		public double log_probability {
			[CCode(cname = "panda_quality_log_probability")]
			get;
		}
		/**
		 * Convert the PHRED quality score to a probability.
		 */
		public double probability {
			[CCode(cname = "panda_quality_probability")]
			get;
		}
	}

	/**
	 * A reconstructed nucleotide
	 */
	[CCode(cname = "panda_result", has_type_id = false)]
	public struct result {
		/**
		 * The nucleotide
		 */
		Nt nt;
		/**
		 * The quality score as a log probability
		 */
		double p;
	}

	/**
	 * A reconstructed sequence with meta information
	 */
	[CCode(cname = "panda_result_seq", has_type_id = false, destroy_function = "")]
	public struct result_seq {
		/**
		 * Number of uncalled bases in the sequence.
		 */
		size_t degenerates;

		/**
		 * The original forward sequence
		 */
		[CCode(array_length_cname = "forward_length")]
		qual[] forward;

		/**
		 * The number of nucleotides clipped from the forward sequence
		 */
		size_t forward_offset;

		/**
		 * The sequence identification information
		 */
		identifier name;

		/**
		 * Calculated quality score as the geometric mean of the product of the Illumina quality scores of the included bases.
		 *
		 * It will always be between 0 and 1.
		 */
		double quality;

		/**
		 * The reconstructed sequence with quality information
		 */
		[CCode(array_length_cname = "sequence_length")]
		result[] sequence;

		/**
		 * The original reverse sequence
		 */
		[CCode(array_length_cname = "reverse_length")]
		qual[] reverse;

		/**
		 * The number of nucleotides clipped from the reverse sequence
		 */
		size_t reverse_offset;

		/**
		 * The number of mismatches in the overlap region.
		 */
		size_t overlap_mismatches;

		/**
		 * Write an assembly to a FASTA file.
		 */
		[CCode(cname = "panda_output_fasta")]
		public bool write_fasta(
#if POSIX
Posix.FILE
#else
GLib.FileStream
#endif
file);
		/**
		 * Write an assembly to a FASTQ file.
		 */
		[CCode(cname = "panda_output_fastq")]
		public bool write_fastq(
#if POSIX
Posix.FILE
#else
GLib.FileStream
#endif
file);
	}

	/**
	 * Maximum length of a sequence
	 */
	[CCode(cname = "PANDA_MAX_LEN")]
	public const int MAX_LEN;

	/**
	 * Log an error/event
	 *
	 * If the function returns false, assembly will be halted.
	 * The variadic arguments will provide context based on the particular code passed.
	 * @see Code
	 */
	[CCode(cname = "PandaLogger", instance_pos = 0)]
	public delegate bool Logger(Code code, ...);

	/**
	 * Get the next character from a FASTQ file or EOF.
	 *
	 * For assembly from an alternate source of data, this function returns the next character in the stream.
	 */
	[CCode(cname = "PandaNextChar")]
	public delegate int NextChar();

	/**
	 * Get the next sequence pair.
	 *
	 * For assembly from a non-FASTQ text source, this function can provide the next sequence. The function must provide the sequences and metadata for assembly by modifing the values of its parameters.
	 * @param id the identifier information for the sequence pair
	 * @param forward the location of the parsed sequence data of the forward read.
	 * @param reverse the location of the parsed sequence data of the reverse read.
	 */
	[CCode(cname = "PandaNextSeq")]
	public delegate bool NextSeq(out identifier id, out unowned qual[] forward, out unowned qual[] reverse);

	[CCode(cname = "PandaPrintf", instance_pos = 0)]
	[PrintfFormat]
	public delegate void PrintfFunc(string format, ...);

	/**
	 * Create an object to read sequences from two character streams of FASTQ data
	 *
	 * @param forward the stream of forward characters, called every time a new character is required.
	 * @param reverse the stream of reverse characters, called every time a new character is required.
	 * @param logger the logging function to use during assembly.
	 */
	[CCode(cname = "panda_assembler_create_fastq_reader")]
	public static NextSeq create_fastq_reader(owned NextChar forward, owned NextChar reverse, Logger logger, uint8 qualmin = 33);

	[CCode(cname = "panda_version")]
	public unowned string get_version();

	/**
	 * Write errors and information to a file.
	 */
	[CCode(cname = "panda_logger_file")]
	public bool file_logger(
#if POSIX
Posix.FILE
#else
GLib.FileStream
#endif
file, Code code, ...);

	/**
	 * Writes an error message using the supplied printf-like function.
	 */
	[CCode(cname = "panda_logger_v")]
	bool logger_v(PrintfFunc func, Code code, va_list va);
	/**
	 * Create a file logger
	 */
	[CCode(cname = "PANDA_LOGGER")]
	public Logger create_logger(
#if POSIX
Posix.FILE
#else
GLib.FileStream
#endif
file);
}
